
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    email it to: develop@darkbot.info
    Support (only): http://forum.darkbot.info
    *******************************************************


Darkbot 7.0-RC7: Mar 13th, 2003
	
	- On startup, we now run_performs() BEFORE we join our home
	  channel. This fixes an issue that happened chiefly on 
	  Undernet, and allows the bot to authenticate and set 
	  umode +x, before it joins any channels.  I hope to fix 
	  this in a better way, but for now it's driving me nuts.

	- The startup screen now actually reflects what version this
	  is. Sorry, I forgot all about that startup screen, because
	  it's hard coded. hehe.

	- The Q~ variable in topic replies now works correctly. It
 	  was chopping all but the first word off, before.

	- Added MrSiMo to the list of contributors for his Arabic
	  translation.

	- The sleep command now accepts an arguement for the number
 	  of seconds you want the bot to sleep for.

	- DEFAULT_UMODE is now set immediately upon connection. 
 	  Several users said this was not being done, it was. It was
 	  just waiting >300 seconds, for whatever reason. Also, the
	  bot command PERFORMS now sets DEFAULT_UMODE in addition
  	  to running the the performs file.

	- New command line option.
	  -I now specifies the location of the directory containing
          the data files (by default, dat/).

	- Multiple command line arguements are now supported. 
 	  I have no clue why this wasn't done before.

	- The .debug and .debug2 scripts were missing from the
 	  distribution. They're back now.

	- Found another place where the bot wasn't deleting old
	  userlist entries. This has been fixed.

	- Added the CHANUSERS command. All this does is return
	  a list of users on either the specified channel, or 
	  the current channel, if none is specified. I may 
	  remove this eventually, as i'm just using it for 