@@ -8,6 +8,9 @@
 
 Darkbot 7.0-RC7: Mar 13th, 2003
 	
+	- The MEM command is now limited to only users with admin
+	  (level 3) access on the bot.
+
 	- On startup, we now run_performs() BEFORE we join our home
 	  channel. This fixes an issue that happened chiefly on 
 	  Undernet, and allows the bot to authenticate and set 
